--- a/file-crypto/templates/file-upload.html
+++ b/file-crypto/templates/file-upload.html
@@ -1,4 +1,5 @@
 {% extends 'owner_masterpage.html' %}
+
   {% block content_page %}
   <section class="login">
    <div class="container">
@@ -8,27 +9,28 @@
             <h3>File Upload</h3>
           </div>
           <div class="card-body">
-            <form>
-
-              <div class="input-group form-group">
-                <div class="input-group-prepend">
-                  <span class="input-group-text"><i class="fas fa-file"></i></span>
-                </div>
-                <input type="text" class="form-control" placeholder="username">
-              </div>
-
+            <form action="http://127.0.0.1:5000/upload" method="POST">
               <div class="input-group form-group">
                 <div class="input-group-prepend">
                   <span class="input-group-text"><i class="fas fa-key"></i></span>
                 </div>
-                <input type="file" class="form-control" placeholder="password">
+                <input type="file" class="form-control" placeholder="choose file">
               </div>
               <div class="form-group">
                 <input type="submit" value="Upload" class="btn float-right login_btn">
               </div>
+              {% if error %}
+                <div class="alert alert-danger">
+                  <strong>Notice!</strong> {% error %}
+                </div>
+              {% endif %}
+              {% if d %}
+              <div class="alert alert-success">
+                <strong>Success!</strong> {% d %}
+              </div>
+              {% endif %}
             </form>
           </div>
-
         </div>
       </div>
     </div>
