--- a/file-crypto/templates/owner_masterpage.html
+++ b/file-crypto/templates/owner_masterpage.html
@@ -20,7 +20,9 @@
     <!-- Your custom styles (optional) -->
     <link href="/static/css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="/static/css/responsive.css">
-
+<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">-->
+<!--    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>-->
+<!--    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>-->
   </head>
   <body>
       <section class="container-fluid px-0">
